--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/factorio-combinator-playground/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Vite App</title>
-    <script type="module" crossorigin src="/factorio-combinator-playground/assets/index.1ad1632c.js"></script>
-    <link rel="stylesheet" href="/factorio-combinator-playground/assets/index.418c078e.css">
+    <script type="module" crossorigin src="/factorio-combinator-playground/assets/index.b4147ed2.js"></script>
+    <link rel="stylesheet" href="/factorio-combinator-playground/assets/index.c80a5341.css">
   </head>
   <body>
     <div id="root"></div>
